# Matching

./: ChangeLog  DESCRIPTION  INDEX  MD5  NAMESPACE  configure  configure.ac
R/: AI.R  GenBalance.R  GenMatching.R  Matchby.R  Matching.R
data/: lalonde.rda
demo/: AbadieImbens.R  DehejiaWahba.R  GerberGreenImai.R
inst/: CITATION
inst/extras/: Makevars.win.gcc4
man/: GenMatch.Rd  GerberGreenImai.Rd  Match.Rd  MatchBalance.Rd  Matchby.Rd  balanceMV.Rd  balanceUV.Rd  ks.boot.Rd  lalonde.Rd  qqstats.Rd  summary.Match.Rd  summary.Matchby.Rd  summary.balanceMV.Rd  summary.balanceUV.Rd  summary.ks.boot.Rd
src/: Makefile  Makevars.win  makefile.in  matching.cc  matching.h  scythematrix.cc  scythematrix.h
tests/: AbadieImbens.R  AbadieImbens.Rout.save  DehejiaWahba.R  DehejiaWahba.Rout.save  GenMatch.R  GenMatch.Rout.save  Matchby.R  Matchby.Rout.save
